Table Tipo_Doc {
  tipo_doc_id integer [pk, increment]
  nombre varchar(255)
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Empleado {
  empleado_id integer [pk, increment]
  sucursal_id integer [ref: > Sucursal.sucursal_id]
  cargo_id integer [ref: > Cargo.cargo_id]
  nombre varchar(30)
  apellido varchar(30)
  documento integer
  direccion varchar(255)
  tipo_doc_id integer [ref: > Tipo_Doc.tipo_doc_id]
  telefono varchar(20)
  email varchar(40)
  es_juridica boolean
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Cargo {
  cargo_id integer [pk, increment]
  nombre varchar(20)
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Cliente {
  cliente_id integer [pk, increment]
  sit_econ_id integer [ref: > Situacion_Econ.situacion_econ_id]
  ingresos_dec integer
  nombre varchar(30)
  apellido varchar(30)
  documento integer
  direccion varchar(255)
  tipo_doc_id integer [ref: > Tipo_Doc.tipo_doc_id]
  telefono varchar(20)
  email varchar(40)
  es_juridica boolean
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
  checks {
    `ingresos_dec >= 0` [name: 'check_ingresos_dec']
  }
}

Table Situacion_Econ {
  situacion_econ_id integer [pk, increment]
  nombre varchar(20)
  ingreso_min integer
  ingreso_max integer
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Garante {
  garante_id integer [pk, increment]
  relacion_cliente varchar(255)
  nombre varchar(30)
  apellido varchar(30)
  documento integer
  direccion varchar(255)
  tipo_doc_id integer [ref: > Tipo_Doc.tipo_doc_id]
  telefono varchar(20)
  email varchar(40)
  es_juridica boolean
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Sucursal {
  sucursal_id integer [pk, increment]
  nombre varchar(20)
  email varchar(40)
  telefono varchar(20)
  direccion varchar(255)
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Solicitud {
  solicitud_id integer [pk, increment]
  motivo varchar(50)
  monto integer
  estado varchar(20)
  cliente_id integer [ref: > Cliente.cliente_id]
  producto_finan_id integer [ref: > Producto_Finan.producto_finan_id]
  credito_id integer [ref: - Credito.credito_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
  checks {
    `estado IN ('aprobado', 'rechazado', 'revision')` [name: 'check_estado']
  }
}

Table Solicitud_Garante {
  solicitud_garante_id integer [pk, increment]
  solicitud_id integer [ref: > Solicitud.solicitud_id]
  garante_id integer [ref: > Garante.garante_id]
}

Table Producto_Finan {
  producto_finan_id integer [pk, increment]
  limite_cred integer
  nombre varchar(20)
  tasa_base decimal(4, 2)
  requisitos_prod_id integer [ref: > Requisitos_Prod.requisitos_prod_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Hist_Tasas {
  hist_tasas_id integer [pk, increment]
  producto_finan_id integer [ref: > Producto_Finan.producto_finan_id]
  tasa_vigente decimal(4, 2)
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Requisitos_Prod {
  requisitos_prod_id integer [pk, increment]
  cuenta boolean
  hist_positivo boolean
  tiene_garante boolean
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Credito {
  credito_id integer [pk, increment]
  monto_ot integer
  tasa_int decimal(4, 2)
  fecha_fin date
  plazo_dias integer
  credito_refinanciado_id integer [ref: - Credito.credito_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Evaluacion_Riesgo {
  evaluacion_riesgo_id integer [pk, increment]
  puntaje_riesgo integer
  estado varchar(20)
  solicitud_id integer [ref: - Solicitud.solicitud_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Evaluacion_Seg {
  evaluacion_seg_id integer [pk, increment]
  comportamiento_pago varchar(20)
  nivel_endeudamiento integer
  cliente_id integer [ref: > Cliente.cliente_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Cuota {
  cuota_id integer [pk, increment]
  credito_id integer [ref: > Credito.credito_id]
  nro_cuota integer
  monto_total integer
  estado varchar(20)
  fecha_venc date
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
  checks {
    `estado IN ('pendiente', 'pagado')` [name: 'check_estado']
  }
}

Table Pago {
  pago_id integer [pk, increment]
  cuota_id integer [ref: - Cuota.cuota_id]
  dias_demora integer
  pena_mora decimal(9, 2)
  monto_pago decimal(9, 2)
  metodo_pago_id integer [ref: > Metodo_Pago.metodo_pago_id]
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Metodo_Pago {
  metodo_pago_id integer [pk, increment]
  nombre varchar(30)
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Campania_Prom {
  campania_prom_id integer [pk, increment]
  tasa_prom decimal(4, 2)
  vigencia date
  habilitado boolean [default: 'TRUE']
  fecha_alta date [default: 'GETDATE()']
  fecha_baja date
  fecha_mod date
  usuario_alta varchar(30)
  usuario_mod varchar(30)
}

Table Campania_Cliente {
  campania_cliente_id integer [pk, increment]
  campana_prom_id integer [ref: > Campania_Prom.campania_prom_id]
  cliente_id integer [ref: > Cliente.cliente_id]
}

Table Campania_Producto {
  campania_producto_id integer [pk, increment]
  campania_prom_id integer [ref: > Campania_Prom.campania_prom_id]
  producto_finan_id integer [ref: > Producto_Finan.producto_finan_id]
}